fix: z-index issue with 'Display Mode' buttons, displaying over header after scrolling.

--- a/ui/src/styles/globals.css
+++ b/ui/src/styles/globals.css
@@ -466,3 +466,8 @@ input.select-scenario {
 .tree-node-content {
   outline: none;
 }
+
+.display-mode{
+  position:relative;
+  z-index: 0;
+}
